add RecyclerView in CartActivity

--- a/androidApp/app/src/main/res/values/strings.xml
+++ b/androidApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">SeeStore</string>
     <string name="title_activity_main">SeeStore</string>
+    <string name="title_activity_cart">Carthihihi</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="back">Back</string>
