--- a/androidApp/app/src/main/res/values/strings.xml
+++ b/androidApp/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="previous">Previous</string>
     <string name="back">Back</string>
     <string name="hello_world">Hello world</string>
-    <string name="check_out">Thanh toán</string>
-    <string name="total">Tổng cộng</string>
-    <string name="sub_total">Tổng tiền</string>
+    <string name="check_out">Đặt hàng</string>
+    <string name="total">Tổng thanh toán</string>
+    <string name="sub_total">Tổng cộng</string>
     <string name="shipping">Vận chuyển</string>
     <string name="cart_header">Vận chuyển</string>
 
