--- a/androidApp/app/src/main/res/values/strings.xml
+++ b/androidApp/app/src/main/res/values/strings.xml
@@ -1,17 +1,16 @@
 <resources>
     <string name="app_name">SeeStore</string>
-    <string name="title_activity_main">SeeStore</string>
-    <string name="title_activity_cart">Carthihihi</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="back">Back</string>
-    <string name="hello_world">Hello world</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error_message">Đã có lỗi xảy ra. Bạn vui lòng thử lại nhé!</string>
+    <string name="search_hint">Bạn tìm gì hôm nay?</string>
+    <string name="title_activity_cart">CartActivity</string>
+
+    <string name="cart_header">Giỏ hàng</string>
     <string name="check_out">Đặt hàng</string>
     <string name="total">Tổng thanh toán</string>
-    <string name="sub_total">Tổng cộng</string>
     <string name="shipping">Vận chuyển</string>
-    <string name="cart_header">Vận chuyển</string>
-    <string name="error_message">\"Lỗi\"</string>
-    <string name="search_hint">\"Tìm kiếm\"</string>
-
+    <string name="sub_total">Tổng cộng</string>
+    <string name="go_to_cart">Xem giỏ hàng</string>
+    <string name="go_to_wishlist">Xem danh sách</string>
+    <string name="skip_snackbar">Bỏ qua</string>
 </resources>
